# serializer version: 1
# name: test_run_db_create__areas[YAMLConfigFile]
  list([
    'gtd',
    'own',
    'tags',
    'thoughts',
  ])
# ---
# name: test_run_db_create__contexts[YAMLConfigFile]
  list([
    'due',
    'dzwk',
    'fat_pig',
    'pomodoro',
    'puke',
  ])
# ---
# name: test_run_db_create__file_count[YAMLConfigFile]
  10
# ---
# name: test_run_db_create__note_count[YAMLConfigFile]
  134
# ---
# name: test_run_db_create__people[YAMLConfigFile]
  list([
    'clyzajrm',
    'pig',
  ])
# ---
# name: test_run_db_create__projects[YAMLConfigFile]
  list([
    'arms',
    'bad',
    'bazbuz',
    'bmlakcr',
    'bqf',
    'cmeq',
    'cpv_mociy',
    'fgifr',
    'foobar',
    'ipyt',
    'judo',
    'jws_pkaft',
    'laundry',
    'lozmhqjd',
    'okwz',
    'owwnfb',
    'qbsum',
    'rgw_sxtvx',
    'saxy',
    'to_the_bone',
    'uahi',
    'vd_clxi',
    'vennc',
    'vfntwi',
    'wjybwa',
    'xoao',
    'zorg',
    'zv_jzdd_djqa',
  ])
# ---
# name: test_run_db_create__properties[YAMLConfigFile]
  list([
  ])
# ---
# name: test_run_db_create__table_names[YAMLConfigFile]
  list([
    'area',
    'arealink',
    'context',
    'contextlink',
    'person',
    'personlink',
    'project',
    'projectlink',
    'property',
    'propertylink',
    'zorgfile',
    'zorgfilelink',
    'zorgnote',
  ])
# ---
# name: test_run_db_create__todo_count[YAMLConfigFile]
  12
# ---
